<resources>
    <string name="app_name">MyWeatherApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Favourite Cities</string>
    <string name="title_notifications">Notifications</string>
    <string name="unidade_de_temperatura">UNIDADE DE TEMPERATURA</string>
    <string name="salvar">salvar</string>
    <string name="english">English</string>
    <string name="portugu_s">Português</string>
    <string name="idioma">IDIOMA</string>
    <string name="f">F</string>
    <string name="c">C</string>
    <string name="settings">Settings</string>
    <string name="shared_settings">SETTINGS</string>
    <string name="digite_uma_cidade">Digite uma cidade</string>
    <string name="removed_success">SUCESSO REMOÇÃO</string>
    <string name="success">SUCESSO</string>
    <string name="removed_from_fav">Removido dos Favoritos</string>
    <string name="failed">Falha, tente novamente</string>
    <string name="favourited">Favoritado</string>
    <string name="saved">SALVO</string>
</resources>